Amélioration de l'interface et des sprites

--- a/profiles/preferences.properties
+++ b/profiles/preferences.properties
@@ -1,7 +1,7 @@
 #Bomberman User Preferences
-#Tue Jun 10 10:57:19 CEST 2025
+#Wed Jun 11 00:35:44 CEST 2025
 music.enabled=true
-music.volume=0.3
+music.volume=0.06349206349206343
 sound.enabled=true
-sound.volume=0.5
+sound.volume=0.7063492063492063
 theme=DEFAULT
