--- a/profiles/preferences.properties
+++ b/profiles/preferences.properties
@@ -1,7 +1,7 @@
 #Bomberman User Preferences
-#Thu Jun 12 01:57:31 CEST 2025
-music.enabled=true
-music.volume=0.03968253968253965
+#Thu Jun 12 23:25:10 CEST 2025
+music.enabled=false
+music.volume=0.3922249157966899
 sound.enabled=true
-sound.volume=0.11904761904761903
+sound.volume=0.6275222276467485
 theme=DEFAULT
