--- a/profiles/preferences.properties
+++ b/profiles/preferences.properties
@@ -1,6 +1,6 @@
 #Bomberman User Preferences
-#Thu Jun 12 23:25:10 CEST 2025
-music.enabled=false
+#Thu Jun 12 23:45:49 CEST 2025
+music.enabled=true
 music.volume=0.3922249157966899
 sound.enabled=true
 sound.volume=0.6275222276467485
