rajout du changement de thème dans les paramètres (la possibilité de sélectionner avait disparue dans le merge)

--- a/profiles/preferences.properties
+++ b/profiles/preferences.properties
@@ -1,7 +1,7 @@
 #Bomberman User Preferences
-#Fri Jun 13 01:01:56 CEST 2025
-music.enabled=true
+#Fri Jun 13 23:14:33 CEST 2025
+music.enabled=false
 music.volume=0.012711864406779662
-sound.enabled=true
+sound.enabled=false
 sound.volume=0.16101694915254236
-theme=DEFAULT
+theme=DESERT
